# follow_target

./: CMakeLists.txt  README.md  package.xml
config/: default_controller.yaml  follow_target.yaml
include/follow_target/: follow_target.hpp  ft_base.hpp  ft_dynamic_follow.hpp  ft_dynamic_land.hpp  ft_pickup.hpp  ft_speed_controller.hpp  ft_unpick.hpp  ft_utils.hpp
launch/: follow_target_launch.py
lib/: ft_base.cpp  ft_dynamic_follow.cpp  ft_dynamic_land.cpp  ft_pickup.cpp  ft_speed_controller.cpp  ft_unpick.cpp  ft_utils.cpp
src/: follow_target.cpp  follow_target_node.cpp
